--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section id="contact">
         <div class="container justify-content-center px-4 py-5">
             <h2 class="pb-2 border-bottom">Get In Touch</h2>
-            <p>“I’m open to collaboration, feedback, or just a chat about web development. Feel free to get in touch <a href="./more.hmtl.html">with me!</a>”</p>
+            <p>“I’m open to collaboration, feedback, or just a chat about web development. Feel free to get in touch <a href="./hmtl.html">with me!</a>”</p>
           </div>
     </section>
     <section id="footer" class="gradient-background">
